--- a/yaml_test/example.yaml
+++ b/yaml_test/example.yaml
@@ -27,3 +27,25 @@ list_of_values:
     - pineapples
 #another way to list stuff
 yet_another_list: [1.0, "haha", "blah", 2]
+
+# Multi line but retains carriage return in each line (use PIPE)
+multi-line-string_text-field: |
+  nobody sa it was easy
+  oh it's such a shame for us to part
+  nobody said it was easy
+  no one ever said it would be so hard
+  i'm going back to the start
+
+# Multi-line 
+another_multi_line_field:
+  this should 
+  be
+  all in one
+  line
+
+# Multi-line with carriage return appended only at the very end
+yet_another_multi_line_field: >
+  roses
+  are
+  red
+  violets are not really blue?
